--- a/src/styles/constants/_colors.scss
+++ b/src/styles/constants/_colors.scss
@@ -7,6 +7,7 @@ $GRAY6: #666666;
 $GRAYA: #aaaaaa;
 $GRAYD: #dddddd;
 $GRAYE: #eeeeee;
+$GRAY5E: #5e5e5e;
 
 // Chromatic
 $RED: #ff3b30;
@@ -18,7 +19,3 @@ $BLUE: #007aff;
 $INDIGO: #5856d6;
 $PURPLE: #af52de;
 $PINK: #ff2d55;
-
-$BIG_TITLE: #1f315b;
-$TASKS_TITLE: #8f99bf;
-$TASK_ITEM_TITLE: #4f566f;
