--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -1,3 +1,34 @@
+@use '../../styles/constants/colors';
+
 .contents {
-  height: 100%;
+  flex: 1;
+
+  .movieTask {
+    display: flex;
+    padding: 10px;
+    background-color: colors.$GRAYA;
+
+    + .movieTask {
+      margin-top: 10px;
+    }
+
+    .posterBox {
+      flex: 1;
+      height: 100px;
+
+      .poster {
+        width: 100%;
+        height: 100%;
+      }
+    }
+
+    .detailBox {
+      flex: 1;
+      padding: 5px;
+
+      p {
+        margin-bottom: 8px;
+      }
+    }
+  }
 }
