movieItem 컴포넌트 분리 , api 연결

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -25,6 +25,7 @@
 
   .search {
     padding: 10px;
+    margin-left: 10px;
     background-color: colors.$WHITE;
     border: 1px solid colors.$GRAYA;
     border-radius: 4px;
