무한 스크롤 완성 (마음에 안듬)

--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -3,7 +3,8 @@
 
 .contents {
   flex: 1;
-  @include flexbox.flexbox(center, start);
+  @include flexbox.flexbox(start, center);
+  flex-direction: column;
 
   .taskBox {
     width: 100%;
