--- a/src/pages/Favorite/Favorite.module.scss
+++ b/src/pages/Favorite/Favorite.module.scss
@@ -1,3 +1,12 @@
+@use '../../styles/constants/colors';
+@use '../../styles/mixins/flexbox';
+
 .contents {
-  height: 100%;
+  flex: 1;
+  @include flexbox.flexbox(start, center);
+  flex-direction: column;
+
+  .taskBox {
+    width: 100%;
+  }
 }
